crates/runtime/src/datafusion/udf/snapshots/runtime__datafusion__udf__bucket__tests__bucket_array.snap
---
source: crates/runtime/src/datafusion/udf/bucket.rs
expression: result
---
+-------------------------+
| ColumnarValue(ArrayRef) |
+-------------------------+
| 2                       |
| 2                       |
| 2                       |
+-------------------------+
