crates/runtime/src/datafusion/udf/snapshots/runtime__datafusion__udf__bucket__tests__bucket_scalar.snap
---
source: crates/runtime/src/datafusion/udf/bucket.rs
expression: result
---
+----------------------------+
| ColumnarValue(ScalarValue) |
+----------------------------+
| 3                          |
+----------------------------+
