crates/runtime/src/datafusion/udf/snapshots/runtime__datafusion__udf__bucket__tests__empty_array.snap
---
source: crates/runtime/src/datafusion/udf/bucket.rs
expression: result
---
+-------------------------+
| ColumnarValue(ArrayRef) |
+-------------------------+
+-------------------------+
